// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render clear icon depends on size 1`] = `
<svg
  aria-label="Очистить поле"
  class="clear-button"
  data-testid="input:clear-button"
  height="16"
  role="button"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    clip-rule="evenodd"
    d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm2.828-9.828a1 1 0 0 1 0 1.414L9.414 8l1.414 1.414a1 1 0 0 1-1.414 1.414L8 9.414l-1.414 1.414a1 1 0 1 1-1.414-1.414L6.586 8 5.172 6.586a1 1 0 0 1 1.414-1.414L8 6.586l1.414-1.414a1 1 0 0 1 1.414 0Z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`Input should render clear icon depends on size 2`] = `
<svg
  aria-label="Очистить поле"
  class="clear-button"
  data-testid="input:clear-button"
  height="24"
  role="button"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    clip-rule="evenodd"
    d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10Zm4.95-6.464a1 1 0 1 1-1.414 1.414L12 13.414 8.464 16.95a1 1 0 1 1-1.414-1.414L10.586 12 7.05 8.464A1 1 0 0 1 8.464 7.05L12 10.586l3.536-3.536a1 1 0 1 1 1.414 1.414L13.414 12l3.536 3.536Z"
    fill-rule="evenodd"
  />
</svg>
`;
